Don't animate the listing chooser until the page has loaded.
This should fix the collapse animation playing upon first load.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7074,7 +7074,10 @@ body.with-listing-chooser.listing-chooser-collapsed {
     padding-right: @listing-chooser-grippy-width;
     background: #f7f7f7;
     overflow: hidden;
-    .transition(width, .25s);
+
+    &.initialized {
+        .transition(width, .25s);
+    }
 
     &:after {
         content: '';
