--- a/r2/r2/templates/promotedlinktraffic.html
+++ b/r2/r2/templates/promotedlinktraffic.html
@@ -112,7 +112,8 @@
         <th>${_("start")}</th>
         <th>${_("end")}</th>
         <th>${_("target")}</th>
-        <th>${_("bid")}</th>
+        <th>${_("budget")}</th>
+        <th>${_("spent")}</th>
         <th>${_("impressions")}</th>
         <th>${_("cpm")}</th>
         <th>${_("clicks")}</th>
@@ -128,7 +129,8 @@
               <td>${camp['start']}</td>
               <td>${camp['end']}</td>
               <td>${camp['target']}</td>
-              <td>${camp['bid']}</td>
+              <td>${camp['budget']}</td>
+              <td>${camp['spent']}</td>
               <td>${camp['impressions']}</td>
               <td>${camp['cpm']}</td>
               <td>${camp['clicks']}</td>
