--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -146,6 +146,12 @@
 
       <p>${checkbox(_("show me links I've recently viewed"), "clickgadget")}</p>
       <p>${checkbox(_("compress the link display"), "compress")}</p>
+      <p>${checkbox(_("show additional details in the domain text when available"), "domain_details")}
+        &#32;
+        <span class="little gray">
+          ${_("(such as the source subreddit or the content author's url/name)")}
+        </span>
+      </p>
       <p>${checkbox(_("don't show links after I've liked them"), "hide_ups")}
          &#32;
          <span class="little gray">${_("(except my own)")}</span>
