--- a/r2/r2/templates/promotereport.html
+++ b/r2/r2/templates/promotereport.html
@@ -61,6 +61,9 @@ ${unsafe(js.use('sponsored'))}
     </div>
     %endif
     <br>
+    <h2>owner<h2>
+    <input name="owner" value="${thing.owner_name}">
+    <br>
     <input type="submit" value="${_("go")}"></input>
   </form>
 </div>
