--- a/r2/r2/templates/promotedlink.html
+++ b/r2/r2/templates/promotedlink.html
@@ -38,7 +38,8 @@
    else:
      taglinetext = _("promoted by %(author)s") 
    taglinetext = taglinetext.replace(" ", "&#32;")
-   author = WrappedUser(thing.author, thing.attribs, thing).render()
+   author = WrappedUser(thing.author, thing.attribs, thing,
+                        force_show_flair=False).render()
  %>
 ${unsafe(taglinetext % dict(date = thing._date.strftime("%Y-%m-%d"), 
                             author= author))}
