Don't prefill user email in share link form.

--- a/r2/r2/templates/sharelink.html
+++ b/r2/r2/templates/sharelink.html
@@ -82,8 +82,7 @@
         </th>
         <td>
           <input name="replyto" type="text" size="30"
-                 id="replyto_${thing.link_name}"
-                 value="${thing.email}"/>
+                 id="replyto_${thing.link_name}"/>
         </td>
         <td class="reply-to-errors">
           ${error_field("BAD_EMAILS", "replyto")}
