Add missing loading indicator throbbers.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5176,6 +5176,10 @@ table.calendar {
             .light-button;
             padding: 3px 4px;
         }
+
+        .throbber {
+            height: 22px;
+        }
     }
 
     form.copy-multi button {
