--- a/r2/r2/templates/multiinfobar.html
+++ b/r2/r2/templates/multiinfobar.html
@@ -56,6 +56,7 @@
   %if thing.can_copy:
     <form class="copy-multi">
       <input type="text" class="multi-name" placeholder="${_('copy name')}"><button class="copy">${_('copy')} &rsaquo;</button>
+      <div class="throbber"></div>
       <div class="error copy-error"></div>
     </form>
   %endif
@@ -64,6 +65,7 @@
     <form class="rename-multi">
       <p class="warning">${_('warning: renaming a multi will break any links and references to the old name.')}</p>
       <input type="text" class="multi-name" placeholder="${_('new name')}"><button class="rename">${_('rename')} &rsaquo;</button>
+      <div class="throbber"></div>
       <div class="error rename-error"></div>
     </form>
   %endif
