New comment highlighting: switch to a dropdown

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5689,10 +5689,7 @@ body:not(.gold) .allminus-link {
 
 .comment-visits-box .title {
     font-weight: bold;
-}
-
-.comment-visits-box label {
-    margin-left: 5px;
+    font-size: 12px;
 }
 
 .new-comment .usertext-body {
