Add approval checkmark to comments as well

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3323,6 +3323,10 @@ form input[type=radio] {margin: 2px .5em 0 0; }
     margin-left: 3px;
 }
 
+.tagline .approval-checkmark {
+    height: 1em;
+}
+
 .little { font-size: smaller  }
 .gray { color: gray }
 
