--- a/r2/r2/templates/comment.html
+++ b/r2/r2/templates/comment.html
@@ -137,6 +137,7 @@ ${parent.collapsed()}
         ${ungettext("child", "children", thing.num_children)})
     </a>
   %endif
+  ${self.approval_checkmark()}
 </%def>
 
 <%def name="Child()">
