--- a/r2/r2/templates/printable.html
+++ b/r2/r2/templates/printable.html
@@ -21,7 +21,7 @@
 ###############################################################################
 
 <%! 
-   from r2.lib.template_helpers import add_sr
+   from r2.lib.template_helpers import add_sr, static
    from r2.lib.strings import strings
    from r2.lib.pages.things import BanButtons
 %>
@@ -42,6 +42,15 @@ ${self.RenderPrintable()}
           ${strings.banned}
         %endif
       ]</li></b>
+  %endif
+</%def>
+
+<%def name="approval_checkmark()">
+  %if getattr(thing, "approval_checkmark", None):
+      <img class="approval-checkmark" title="${thing.approval_checkmark}"
+           src="${static('green-check.png')}"
+           onclick="alert('${thing.approval_checkmark}\n\n${_("(no need to click for this info; just hover over the checkmark next time)")}')"
+         >
   %endif
 </%def>
 
