Basic markdown descriptions for multireddits.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5198,6 +5198,16 @@ table.calendar {
         }
     }
 
+    .description {
+        margin: .75em 0;
+
+        .usertext-edit, textarea {
+            // use !important to override legacy inline style width set by
+            // show_edit_usertext()
+            width: 294px !important;
+        }
+    }
+
     ul, form.add-sr {
         margin-left: 12px;
     }
